Fri Mar 17 20:07:15 2000  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock): 
	   Clean-up

	* src/tcp.c (gnet_tcp_socket_server_accept): Check errno
	   against EPROTO only if EPROTO is defined.  (It isn't
	   on OpenBSD.  Fix by Niels.)

Sun Mar  5 14:22:11 2000  David Helder  <dhelder@umich.edu>

	* auto*: Release version 1.0.1

Tue Feb 29 11:18:52 2000  David Helder  <dhelder@umich.edu>

	* AUTO*: Version 1.0.1 (unreleased)
	* src/gnet.c (gnet_io_channel_readline_strdup): Fixed typo bug
	    where buffer was growing too fast.  Found by Carl Armstrong
	    <carl@avalon.cameron.edu>.

Mon Feb 28 12:38:31 2000  David Helder  <dhelder@umich.edu>

	* NEWS, etc: Version 1.0.0
	* debian/*: Upped version to 1.0.0-2, cleaned up control.in
	* gnet.spec.in: Upped version to 1.0

Wed Feb 23 10:49:39 2000  David Helder  <dhelder@umich.edu>

	* src/tcp.c (gnet_tcp_socket_server_accept_nonblock):
	   Added.  Theoretically, gnet_tcp_socket_server_accept could
	   block even if the channel was readable, so I added this.

	* src/tcp.[ch], inetaddr.[ch]: 
	 
	 - Renaming:
	     GTcpSocketAsyncFunc  -> GTcpSocketNewAsyncFunc
	     GTcpSocketAyncStatus -> GTcpSocketNewAyncStatus
	     etc...

	 - gpointer ID's given better names:
	     GTcpSocketNewAsyncID
	     GTcpSocketConnectAsyncID
	     GInetAddrNewAsyncID
	     GInetAddrGetNameAyncID

	* doc/*, src/*, TODO, README, HACKING: Doc cleanups/improvements
	
	* libtool*: Upgrade to libtool 1.3.4
	* auto*: Version set to 0.1.10 (for now)

Tue Feb 15 17:01:39 2000  David A Helder  <dhelder@umich.edu>

	* debian/changelog: Removed middle initial.

Tue Feb 15 10:13:59 2000  David A Helder  <dhelder@umich.edu>

	* doc/*: Updates for new stuff
        * src/*: Documentation fixes
	
	* configure.in: Check for sys/poll.h
	* src/gnet-private.h: Changed __EMX__ to HAVE_SYS_POLL_H
	* acconfig.h: Added HAVE_SYS_POLL_H

	* src/{tcp, inetaddr}.c: Reordered enums so that OK comes 
	    first.
	